# jni_immessage

./: .gitignore
pb_test/jni/: Android.mk  Application.mk  CMakeLists.txt
pb_test/jni/apply/: IMBuddy.cpp  IMBuddy.h  IMFile.cpp  IMFile.h  IMGroup.cpp  IMGroup.h  IMLogin.cpp  IMLogin.h  IMMessage.cpp  IMMessage.h  IMOther.cpp  IMOther.h  IMSwitchService.cpp  IMSwitchService.h  ImPduBase.cpp  ImPduBase.h  UtilPdu.cpp  UtilPdu.h
pb_test/jni/impb.xcodeproj/: project.pbxproj
pb_test/jni/impb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pb_test/jni/impb.xcodeproj/project.xcworkspace/xcuserdata/dangta.xcuserdatad/: UserInterfaceState.xcuserstate
pb_test/jni/impb.xcodeproj/project.xcworkspace/xcuserdata/dffx.xcuserdatad/: UserInterfaceState.xcuserstate
pb_test/jni/impb.xcodeproj/xcuserdata/dangta.xcuserdatad/xcschemes/: impb.xcscheme
pb_test/jni/impb.xcodeproj/xcuserdata/dffx.xcuserdatad/xcschemes/: xcschememanagement.plist
pb_test/jni/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h
pb_test/jni/src/: impb_interface.cpp  impb_interface.h
pb_test/jni/vsproject/: impb.sln  impb.vcxproj
protobuf/jni/: Android.mk  Application.mk
security/jni/: Android.mk  Application.mk  CMakeLists.txt
security/jni/security.xcodeproj/: project.pbxproj
security/jni/src/: impb_security.cpp  impb_security.h  (+1 more)
test_pb/: CMakeLists.txt  test_pb.cpp
test_pb/include/: imdefine.h  impb_interface.h  impb_security.h
test_pb/vsproject/: out.data  outFile.txt  test_pb.sln  test_pb.vcxproj
test_pb/x86/: security.lib
test_pb_xcode/: impb_interface.h
test_pb_xcode/test_pb_xcode/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.m  main.m
test_pb_xcode/test_pb_xcode.xcodeproj/: project.pbxproj
(+17 files in other folders)
