cmake_minimum_required(VERSION 2.6)
PROJECT(test_pb)

AUX_SOURCE_DIRECTORY(./ SRC_LIST1)

SET(LIBRARY_OUTPUT_PATH ./)
#SET(EXECUTABLE_OUTPUT_PATH  ./bin)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON)

INCLUDE_DIRECTORIES( ./ ./jsoncpp)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/  )

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_LIST})
ADD_EXECUTABLE(test_pb ${SRC_LIST1})

TARGET_LINK_LIBRARIES(test_pb impb protobuf-lite security)
